# m-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  STATUS-REPORT.md  pyproject.toml
.githooks/: post-commit  pre-commit  pre-push
app/: README.md  config.example.env  config.py  requirements.txt
config/: platform-policy.example.yaml
data/: leader-mapping.json
docs/: README.md  review-module-design-v0.1.md  wecom-learning-gateway-design.md
scripts/: backfill_task_status.py  bot_services.py  hook-test.py  hook-test.sh  migrate_runtime_data.py  platform_readiness.py  project_docs.py  review_quality.py
skills/: brief_quality.py  brief_revision.py  material_priority.py  revision_support.py  writing_planner.py
tests/: test_admin_server.py  test_admin_services.py  test_bank_knowledge.py  test_bot_logging.py  test_bot_services.py  test_brief_docx_metadata.py  test_brief_docx_output.py  test_brief_quality.py  test_brief_quality_regression.py  test_brief_revision.py  test_brief_writer_workflows.py  test_citation_verifier.py  test_direct_report_docx_output.py  test_direct_report_guardrails.py  test_direct_report_policy_gate.py  test_direct_report_policy_research.py  test_direct_report_quality_regression.py  test_direct_report_workflow.py  test_error_marker.py  test_installed_writer_skills.py  test_internal_weekly_docx_output.py  test_internal_weekly_selection.py  test_internal_weekly_workflow.py  test_notification.py  test_official_format_review.py  test_ops_bot_state.py  test_ops_config.py  test_ops_events.py  test_ops_heartbeat.py  test_ops_notifier.py  (+80 more)
(+331 files in other folders)
