[project]
name = "m-agent"
version = "0.1.0"
description = "M-Agent enterprise WeCom agent platform"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "anthropic==0.116.0",
    "beautifulsoup4==4.14.3",
    "curl-cffi==0.14.0",
    "lxml==5.4.0",
    "openai==2.30.0",
    "pydantic==2.12.5",
    "pydantic-ai-slim[anthropic,openai]==2.4.0",
    "pypdf==6.14.2",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "PyYAML==6.0.3",
    "wecom-aibot-sdk==1.0.7",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
]

[tool.uv]
package = false
